successfully generated SDK for front
