# User/Models/DTOs/createUserDto.cs
@@ -1,6 +1,13 @@
-public class CreateUserDto
+public class CreateUserRequestDto
 {
     public string Name { get; set; } = string.Empty;
     public string Login { get; set; } = string.Empty;
     public string Password { get; set; } = string.Empty;
 }
+
+public class CreateUserResponseDto
+{
+    public string Message { get; set; } = string.Empty;
+    public string Token { get; set; } = string.Empty;
+}
+
